--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "expo": "~36.0.0",
     "express": "^4.17.1",
+    "mysql2": "^2.1.0",
     "native-base": "^2.13.8",
     "object-hash": "^2.0.1",
     "react": "~16.9.0",
