--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.5",
+    "@reduxjs/toolkit": "^1.2.3",
     "cors": "^2.8.5",
-    "expo": "~36.0.0",
+    "expo": "^36.0.2",
+    "expo-font": "~8.0.0",
     "express": "^4.17.1",
     "mysql2": "^2.1.0",
     "native-base": "^2.13.8",
@@ -20,17 +22,18 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.5.0",
+    "react-native-gesture-handler": "^1.5.6",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-status-bar-height": "^2.4.0",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.0.10",
+    "react-navigation": "^4.1.1",
     "react-navigation-drawer": "^2.3.3",
-    "react-navigation-stack": "^2.0.16",
+    "react-navigation-stack": "^2.1.1",
     "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.1.3",
-    "redux": "^4.0.4"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@react-native-community/async-storage": "^1.7.1",
